# fluent-telegrinder

./: .ruff.toml  LICENSE  README.md  pyproject.toml
src/fluent_telegrinder/: __init__.py  config.py  i18n.py  rule.py  sources.py
