[project]
name = "fluent-telegrinder"
version = "1.0.2"
description = "Fluent i18n implementation for telegrinder"
readme = "README.md"
authors = [
    { name = "ventuero", email = "amerfoe@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fluent-runtime>=0.4.0",
]

keywords = ["telegram", "bot", "fluent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ventuero/fluent-telegrinder/blob/main/README.md"
Repository = "https://github.com/ventuero/fluent-telegrinder"

[project.optional-dependencies]
dev = [
    "ruff>=0.13.2",
    "telegrinder",
]

[tool.uv.sources]
telegrinder = { git = "https://github.com/timoniq/telegrinder", rev = "dev" }
